# semantic-search-engine

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py
app/api/: main.py
app/api/routes/: search.py  upload.py
app/core/: config.py
app/embeddings/: __init__.py  encoder.py
app/indexing/: __init__.py  faiss_store.py  metadata_store.py
app/ingestion/: __init__.py  chunker.py  pdf_loader.py
app/retrieval/: __init__.py  keyword.py  semantic.py
app/schemas/: __init__.py  document.py  query.py  result.py
app/services/: __init__.py  indexing_service.py  search_service.py
tests/: test_api_flow.py  test_chunker.py  test_health.py  test_search_service.py
